<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:widget="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            widget:typeface="avenir_regular"
            app:expandedTitleMarginStart="30dp"
            app:expandedTitleMarginEnd="124dp"
            >

            <com.android.volley.toolbox.NetworkImageView
                android:layout_height="@dimen/dimen_size_image_detail"
                android:layout_width="match_parent"
                android:id="@+id/imageViewGnome"
                app:layout_collapseMode="parallax"
                android:scaleType="centerCrop"
                ></com.android.volley.toolbox.NetworkImageView>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                app:layout_scrollFlags="scroll|enterAlways"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.CustomActionBarColor"
                app:layout_collapseMode="pin" >

                <com.app.gnometown.Utils.widgets.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/title"
                    android:textSize="18sp"
                    widget:typeface="avenir_regular"/>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_gravity="fill_vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="wrap_content">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp">

            <!--AGE-->
        <com.app.gnometown.Utils.widgets.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_detail_age"
            android:id="@+id/label_age"
            style="@style/TextInfo.TextViewDetailLabel"
            widget:typeface="avenir_medium" />

            <com.app.gnometown.Utils.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextInfo.TextViewDetailValue"
                android:layout_toRightOf="@+id/label_age"
                android:id="@+id/value_age"
                widget:typeface="avenir_medium" />

            <!--HAIR COLOR-->
            <com.app.gnometown.Utils.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_detail_hair"
                android:id="@+id/label_hair"
                android:layout_toLeftOf="@+id/value_hair"
                style="@style/TextInfo.TextViewDetailLabel"
                widget:typeface="avenir_medium" />

            <com.app.gnometown.Utils.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                style="@style/TextInfo.TextViewDetailValue"
                android:id="@+id/value_hair"
                widget:typeface="avenir_medium" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/accent_material_light_1"></View>

        <!--WEIGHT-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp">

            <com.app.gnometown.Utils.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_detail_weight"
                android:id="@+id/label_weigth"
                style="@style/TextInfo.TextViewDetailLabel"
                widget:typeface="avenir_medium"
                />

            <com.app.gnometown.Utils.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/value_weight"
                style="@style/TextInfo.TextViewDetailValue"
                android:layout_alignParentRight="true"
                widget:typeface="avenir_medium"
                />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/accent_material_light_1"></View>

        <!--HEIGTH-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp">

            <com.app.gnometown.Utils.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_detail_height"
                style="@style/TextInfo.TextViewDetailLabel"
                android:id="@+id/label_heigth"
                widget:typeface="avenir_medium"
                />

            <com.app.gnometown.Utils.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/value_height"
                style="@style/TextInfo.TextViewDetailValue"
                android:layout_alignParentRight="true"
                widget:typeface="avenir_medium"
                />

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/accent_material_light_1"></View>

        <!--PROFESSIONS-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageProf"
                android:src="@drawable/ic_profession"/>

            <com.app.gnometown.Utils.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_detail_profession"
                android:id="@+id/label_prof"
                android:layout_toRightOf="@+id/imageProf"
                android:layout_marginLeft="10dp"
                style="@style/TextInfo.TextViewDetailLabelTitle"
                widget:typeface="avenir_medium"
                />

            <com.app.gnometown.Utils.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/list_profesion"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="3dp"
                style="@style/TextInfo.TextViewDetailValue"
                android:layout_below="@+id/label_prof"
                widget:typeface="avenir_medium"
                />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/accent_material_light_1"></View>

        <!--FRIENDS-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageFriends"
                android:src="@drawable/ic_happy"
               />

            <com.app.gnometown.Utils.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_detail_friends"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/imageFriends"
                style="@style/TextInfo.TextViewDetailLabelTitle"
                android:id="@+id/label_friends"
                widget:typeface="avenir_medium"
                />

            <com.app.gnometown.Utils.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextInfo.TextViewDetailValue"
                android:id="@+id/list_friends"
                android:lineSpacingExtra="3dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/label_friends"
                widget:typeface="avenir_medium"
                />

        </RelativeLayout>

    </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>